--- a/themes.css
+++ b/themes.css
@@ -74,6 +74,23 @@ ul.page_links li+li:before {
 }
 
 
+/* Figure counters
+** idea from: tympanus.net/codrops/2013/05/02/automatic-figure-numbering-with-css-counters/
+*/
+body {
+  /* reset counter */
+  counter-reset: figures;
+}
+.figure figcaption {
+  /* increment counter */
+  counter-increment: figures;
+}
+.figure figcaption:before {
+  /* place count in figure caption */
+  content: '\2003 Figure ' counter(figures) ' - ';
+}
+
+
 /* I'm in the process of removing these entirely */
 #limit {
   max-width: 600px;
