--- a/cheese/styles/main.css
+++ b/cheese/styles/main.css
@@ -5,8 +5,7 @@
 
 
 html body {
-  background-color:powderblue;
-  padding: 10px;
+  background-color: #E9E581;
 }
 
 /* pads */
@@ -14,7 +13,12 @@ html body {
   padding: 10px;"
 }
 
-/* alignment */
+.horizontal-rule {
+  height:1px;
+  border:none;
+  background-color:#333;
+}
+
 .right-align {
   text-align: right;
 }
@@ -73,5 +77,21 @@ ul.page_links li+li:before {
 .fa-youtube-play {
   background: #DD4B39;
   color: white;
+}
+
+/* Figure counters
+** idea from: tympanus.net/codrops/2013/05/02/automatic-figure-numbering-with-css-counters/
+*/
+body {
+  /* reset counter */
+  counter-reset: figures;
+}
+.figure figcaption {
+  /* increment counter */
+  counter-increment: figures;
+}
+.figure figcaption:before {
+  /* place count in figure caption */
+  content: '\2003 Figure ' counter(figures) ' - ';
 }
 
