--- a/inspiration/styles/main.css
+++ b/inspiration/styles/main.css
@@ -5,16 +5,26 @@
 
 
 html body {
-  background-color:powderblue;
-  padding: 10px;
+  background-color: #C0C0C0;
 }
 
+body header {
+  background-color: #CCCCC0;
+}
 /* pads */
 .pad {
   padding: 10px;"
 }
 
-/* alignment */
+.horizontal-rule {
+  height:1px;
+  border:none;
+  background-color:#C0CCCC;
+}
+
+.center-align {
+  text-align: center;
+}
 .right-align {
   text-align: right;
 }
@@ -73,5 +83,21 @@ ul.page_links li+li:before {
 .fa-youtube-play {
   background: #DD4B39;
   color: white;
+}
+
+/* Figure counters
+** idea from: tympanus.net/codrops/2013/05/02/automatic-figure-numbering-with-css-counters/
+*/
+body {
+  /* reset counter */
+  counter-reset: figures;
+}
+.figure figcaption {
+  /* increment counter */
+  counter-increment: figures;
+}
+.figure figcaption:before {
+  /* place count in figure caption */
+  content: '\2003 Figure ' counter(figures) ' - ';
 }
 
