Increased specificity for font styling

--- a/about/styles/main.css
+++ b/about/styles/main.css
@@ -5,7 +5,7 @@
 
 
 /* fonts */
-h1, h2, h3, h4, h5, h6 {
+body h1, body h2, body h3, body h4, body h5, body h6 {
   font-family: 'Sunflower', sans-serif;
 }
 
