--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,7 @@ html body {
   padding: 10px;
 }
 
-h1, h2, h3, h4, h5, h6, h7, h8 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Crimson Text', serif; /* from Google */
 }
 
