--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@
 
 html body {
   background-color: #93B7BE; /* greenish-blue */
-  font-family: 'Ubuntu', sans-serif; /* from Google */
+  font-family: 'Ubuntu', 'Poppins', sans-serif; /* from Google */
   padding: 10px;
 }
 
