--- a/encrypt/styles/main.css
+++ b/encrypt/styles/main.css
@@ -10,8 +10,11 @@ textarea {
   margin: 25px
 }
 
-/* encrypt button: raise it up on page */
+/* encrypt button: raise it up on page
+   courtesy: http://jsfiddle.net/5CZRP/
+*/
 #e-button {
-  margin: 25px 0px 0px 0px;
+  position: relative;
+  top: 15px;
 }
 
