--- a/digitalcard/styles/stylesheet.css
+++ b/digitalcard/styles/stylesheet.css
@@ -27,3 +27,16 @@
     width: 35px;
     height: auto;
 }
+
+.addme {
+    margin: auto;
+    width: 75%;
+    text-align: center;
+}
+
+.addme img {
+    padding: 10px;
+    width: 35px;
+    height: auto;
+}
+
