--- a/digitalcard/styles/stylesheet.css
+++ b/digitalcard/styles/stylesheet.css
@@ -32,6 +32,20 @@ a:link, a:visited {
     height: auto;
 }
 
+/* style professional div */
+.professional {
+    margin: auto;
+    width: 75%;
+    text-align: center;
+}
+
+/* standardize contact images */
+.professional img {
+    padding: 10px;
+    width: 35px;
+    height: auto;
+}
+
 /* style "add to contacts" div */
 .addme {
     margin: auto;
